--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -15,13 +15,6 @@ html, body{
 	border-color: yellow;
 }
 
-body nav{
-	width: 20%;
-	height: 100%;
-	padding: 0;
-	float: left;
-}
-
 ul li{
 	list-style-type: none;
 }
@@ -53,4 +46,11 @@ td.kyokumei{
 
 honbun{
 	border-left-style: solid;
+}
+
+honbun nav{
+	width: 20%;
+	height: 100%;
+	padding: 0;
+	float: left;
 }
