--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -4,9 +4,26 @@
 	}
 }
 
-html, body{
+html{
+	height:100%;
 	margin-bottom: 20px;
 	background-color: yellowgreen;
+}
+
+body{
+	height:100%;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+body > .box {
+	height: auto;
+}
+
+.box{
+	height: 100%;
+	min-height: 100%;
 }
 
 #title{
