--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -36,6 +36,15 @@ ul li{
 	list-style-type: none;
 }
 
+nav > .box {
+	height: auto;
+}
+
+.box{
+	height: 100%;
+	min-height: 100;
+}
+
 nav{
 	width: 20%;
 	height: 100%;
