--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -16,15 +16,6 @@ body{
 	padding: 0;
 }
 
-body > .box {
-	height: auto;
-}
-
-.box{
-	height: 100%;
-	min-height: 100%;
-}
-
 #title{
 	text-align: center;
 	border-bottom-style: solid;
@@ -69,4 +60,13 @@ td.kyokumei{
 
 honbun{
 	border-left-style: solid;
+}
+
+honbun > .box {
+	height: auto;
+}
+
+.box{
+	height: 100%;
+	min-height: 100%;
 }
