--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -59,14 +59,11 @@ td.kyokumei{
 }
 
 honbun{
-	border-left-style: solid;
+	height: 100%;
 }
 
-honbun < .box {
-	height: auto;
-}
-
-.box{
+honbun.box{
 	height: 100%;
 	min-height: 100%;
+	border-right: solid; 
 }
