--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -12,6 +12,7 @@ html{
 
 body{
 	height:100%;
+	display: flex;
 	margin: 0;
 	padding: 0;
 }
@@ -29,7 +30,6 @@ ul li{
 honbun.nav{
 	width: 20%;
 	height: 100%;
-	
 	padding: 0;
 	float: left;
 	border-right: 5px solid #000; 
