--- a/responsive_design_SP.css
+++ b/responsive_design_SP.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 767px) { /* ウィンドウ幅が767px以上の場合に適用 */
+@media screen and (max-width: 767px) { /* ウィンドウ幅が767px以上の場合に適用 */
 	#menu-bg {
 	background-color: #00FF00; /* 緑色 */
   
