--- a/responsive_design_SP.css
+++ b/responsive_design_SP.css
@@ -2,65 +2,69 @@
 	#menu-bg {
 	background-color: #00FF00; /* 緑色 */
 	}
-html{
-	height:100%;
-	margin-bottom: 20px;
-	background-color: yellowgreen;
-}
+	html{
+		height:100%;
+		margin-bottom: 20px;
+		background-color: yellowgreen;
+	}
 
-body{
-	height:100%;
-	margin: 0;
-	padding: 0;
-}
+	body{
+		height:100%;
+		margin: 0;
+		padding: 0;
+	}
 
-#title{
-	text-align: center;
-	border-bottom-style: solid;
-	border-color: yellow;
-}
-
-
-
-ul li{
-	list-style-type: none;
-}
+	#title{
+		text-align: center;
+		border-bottom-style: solid;
+		border-color: yellow;
+	}
 
 
 
-dl dd{
-	text-align: right;
-	line-height: 150%;
-}
+	ul li{
+		list-style-type: none;
+	}
 
-table{
-	border: solid 1px #000;
-	border-collapse: collapse;
-}
 
-th, td {
-	padding: 5px;
-	border: solid 1px #000;
-	border-spacing: 0;
-	font-size: 14px;
-}
 
-td {
-	text-align: center;
-}
+	dl dd{
+		text-align: right;
+		line-height: 150%;
+	}
 
-td.kyokumei{
-	text-align: left;
-}
+	table{
+		border: solid 1px #000;
+		border-collapse: collapse;
+	}
 
-honbun{
-	height: 100%;
-}
+	th, td {
+		padding: 5px;
+		border: solid 1px #000;
+		border-spacing: 0;
+		font-size: 14px;
+	}
 
-honbun.box{
-	height: 100%;
-	min-height: 100%;
-	padding-bottom: 10px;
-	padding-left: 5px;
-}
+	td {
+		text-align: center;
+	}
+
+	td.kyokumei{
+		text-align: left;
+	}
+
+	honbun{
+		height: 100%;
+	}
+
+	honbun.box{
+		height: 100%;
+		min-height: 100%;
+		padding-bottom: 10px;
+		padding-left: 5px;
+	}
+	
+	nav{
+		line-height: 150%;
+	}
 }
