--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -80,6 +80,8 @@
 	        position: relative; 
 	        display: inline-block;
 		float: left;
+		margin: 10px;
+		padding: 5px;		
 	}
 	#right{
    		position: absolute;
