--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -77,7 +77,9 @@
 		text-align: center;
 	}
 	#left{
-	        position: relative; 
+	        position: relative;
+		top: 0pt;
+		left:0pt;
 	        display: inline-block;
 		float: left;
 		margin: 10px;
