--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -82,8 +82,11 @@
 		left:0pt;
 	        display: inline-block;
 		float: left;
-		margin: 10px;
-		padding: 5px;		
+		width: 20%;
+		height: 100%;
+		padding: 0;
+		border-right: 5px solid #000; 
+		line-height: 150%;		
 	}
 	#right{
    		position: absolute;
