--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -84,7 +84,7 @@
 	#right{
    		position: absolute;
    		top: 6em; 
-   		left: 100px;
+   		left: 20%;
    		display: inline-block;
    		float right;
 	} 
