--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -78,7 +78,6 @@
 		width: 20%;
 		height: auto;
 		padding: 0;
-		border-right: 5px solid #000; 
 		line-height: auto;		
 	}
 	#right{
@@ -87,6 +86,7 @@
    		left: 25%;
    		display: inline-block;
    		float right;
+		border-left: 5px solid #000; 
 	} 
 }
 
