--- a/responsive_design_PC.css
+++ b/responsive_design_PC.css
@@ -85,7 +85,7 @@
    		left: 25%;
    		display: inline-block;
    		float right;
-		padding: 10px
+		padding: 10px;
 		border-left: 5px solid #000; 
 	} 
 }
