--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -4,10 +4,11 @@ body{
   box-sizing: border-box;
 }
 
-.site-header{
+.site-left{
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 30%;
+  height: 100%;
   padding: 5px;
   background: #333;
   color: #fff;
