--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -7,7 +7,7 @@ body{
 .site-left{
   position: fixed;
   top: 0;
-  width: 15%;
+  width: 20%;
   height: 100%;
   padding: 5px;
   background: #333;
@@ -16,6 +16,7 @@ body{
 }
 
 .content{
+  position: relative;
   margin-left: 15%;
 }
 
