--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -1,3 +1,7 @@
+title{
+  margin: 0 auto;
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -17,7 +21,7 @@ body{
 
 .content{
   position: absolute;
-  left: 17%;
+  left: 18%;
 }
 
 .box{
