--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -3,7 +3,6 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
-
 .title{
   position: absolute;
   top: 0;
@@ -19,30 +18,17 @@ body{
   left: 18%;
   margin: 0 auto;
   padding: 0;
-  width: 100%;
-}
-
-.site-left{
-  position: fixed;
-  top: 0;
-  width: 17%;
-  height: 100%;
-  padding: 5px;
-  background: #333;
-  color: peach;
-  float: left;
-}
 
 .content{
   position: absolute;
-  left: 18%;
   top: 120px;
+  left: 18%;
 }
 
 .box{
   height: 500px;
   width: 500px;
   margin: 10px auto;
-  background: #ccc;
+  background: #c0c;
   color: #fff;
 }
