--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -3,6 +3,7 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
+
 .title{
   position: absolute;
   top: 0;
@@ -19,6 +20,12 @@ body{
   margin: 0 auto;
   padding: 0;
 
+.site-left{
+  position: fixed;
+  top: 0;
+  height: 100%;
+}
+  
 .content{
   position: absolute;
   top: 120px;
