--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -7,9 +7,8 @@ body{
 .title{
   position: absolute;
   top: 0;
+  margin: auto;
   left: 18%;
-  margin: 0 auto;
-  padding: auto;
   width: 100%;
   text-align: center;
 }
