--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -7,7 +7,7 @@ body{
 .title{
   position: absolute;
   top: 0;
-  margin: auto;
+  margin: 40px;
   left: 0;
   width: 100%;
   text-align: center;
@@ -15,7 +15,7 @@ body{
 
 .substance{
   position: absolute;
-  top: 60px;
+  top: 100px;
   left: 18%;
   margin: 0 auto;
   padding: 0;
@@ -31,7 +31,7 @@ body{
   
 .content{
   position: absolute;
-  top: 120px;
+  top: 160px;
   left: 18%;
   line-height: 300%;
 }
