--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -4,12 +4,17 @@ body{
   box-sizing: border-box;
 }
 
+.text{
+  margin: 40px 0;
+}
+
 .title{
   position: absolute;
   top: 0;
-  margin: 40px 0;
+  margin: 0;
   width: 100%;
   text-align: center;
+  border-radius: 30px;
 }
 
 .substance{
