--- a/MIDI_ex.css
+++ b/MIDI_ex.css
@@ -51,3 +51,19 @@ body{
 dl{
   font-size: 20px;
 }
+
+table{
+		border: solid 1px #000;
+		border-collapse: collapse;
+	}
+
+	th, td {
+		padding: 5px;
+		border: solid 1px #000;
+		border-spacing: 0;
+		font-size: 14px;
+	}
+
+	td {
+		text-align: center;
+	}
